# signatureGenerator

./: CMakeLists.txt
common/memory/: MemoryPool.cpp
doc/: Signature C++.docx
includes/: Crc32.h
signGenerator/: main.cpp
src/common/memory/: MemoryPool.h
src/includes/: MemoryPool.h
src/signGenerator/: CMakeLists.txt  SignatureGenerator.cpp  SignatureGenerator.h
